Fixed bugs, added dark mode switch to all pages.

--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -22,3 +22,17 @@ button {
 li {
     color: white;
 }
+.slider {
+    background-color: #757575;
+}
+.slider::before {
+background-color: rgb(109, 108, 108);
+}
+
+input:checked + .slider {
+background-color: #13548a;
+}
+
+input:focus + .slider {
+box-shadow: 0 0 1px #114c7c;
+}
