--- a/css/lightmode.css
+++ b/css/lightmode.css
@@ -22,3 +22,17 @@ button {
 li {
     color: black;
 }
+.slider {
+    background-color: #ccc;
+}
+.slider::before {
+background-color: white;
+}
+
+input:checked + .slider {
+background-color: #2196F3;
+}
+
+input:focus + .slider {
+box-shadow: 0 0 1px #2196F3;
+}
